--- a/localisation/FU_Persia_l_english.yml
+++ b/localisation/FU_Persia_l_english.yml
@@ -331,7 +331,7 @@
  per_manpower_scaling_to_influence_tt: "based on the §YInfluence§! of the §YQizilbash§!"
  per_if_we_have_ulema_estate_church_for_the_faith_tt: "\nIf the '§YExpansionist Zealotry§!' estate privilege is granted, we will gain:"
  per_else_tt: "\nElse:"
- per_if_tge_active_1_merc_tt: "If §MTrade Goods Expanded§! was active, we would also gain \n§G1§! Mercantilism"
+ per_if_tge_active_1_merc_tt: ""
  per_if_zoroastrian_tt: "If we complete the mission while being §YZoroastrian§! and having the '§YRights of Man§!' DLC our ruler will gain the §YTolerant§! trait if possible \nAdditionally, if we own the '§YCossacks§!'DLC and are §YZoroastrian§!, we will unlock the §GDhimmi§! Estate"
  per_5_random_provinces_gain_random_dev_tt: "5 random provinces owned by us in the §YKhorasan Region§! will gain §G1§! random Development"
  per_allow_formation_of_timurids_tt: "Gain access to the '§YClaim Timur's Legacy§!' National Decision  \nGain a §YTerritorial Core§! on every core province of the §YTimurids§!"
@@ -344,7 +344,7 @@
  per_every_mentioned_silk_province_tt: "\nEvery province mentioned in the §GRequirements§! will gain the following effect:"
  per_from_silk_provinces_tt: "from Silk provinces" 
  per_every_silk_province_mng_tt: "Every province that produces §YSilk§! gains §G2§! Base Production"
- per_upgrade_wool_cotton_cloth_carpet_tt: "Every province with a trade good related to §YCarpets§! will be upgraded in the following order: \n§YCloth§! turns into §GCarpet§! if §MTrade Goods Expanded§! is active \n§YCotton§! turns into §GCloth§! \n§YWool§! turns into §GCotton§!"
+ per_upgrade_wool_cotton_cloth_carpet_tt: ""
  per_architecture_events_start_here_tt: "\n\n§MWe will periodically receive events regarding our nation's architectural achievements§!" 
  per_abbas_architectural_visionary_tt: "§YAbbas I§! will gain the §GArchitectural Visionary§! personality trait"
  per_sassanid_legacy_preserved_tt: "\nBecause we chose to preserve the §YSassanid§! legacy in the '§YTaking up the Mantle§!' event:"
