--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -62,6 +62,13 @@
  X_VEN_mission_30_desc:0 ""
  X_VEN_mission_31_title:0 "Galilean Innovations"
  X_VEN_mission_31_desc:0 ""
+ X_VEN_mission_32_title:0 "Aldine Monopoly"
+ X_VEN_mission_32_desc:0 ""
+ X_VEN_mission_33_title:0 "Interfaith Exchange"
+ X_VEN_mission_33_desc:0 ""
+ X_VEN_mission_34_title:0 "Cilician Expansion"
+ X_VEN_mission_34_desc:0 ""
+
  #Mission Tooltips
  X_VEN_mission_4_tt:0 "All owned coastal provinces with §YAlbanian§! culture have unrest lower than §Y1§!."
  X_VEN_mission_6_tt:0 "No country:\n   One of the following must be true:\n      Has a port on the §YGulf of Venice§!\n      Has a port on the §YAdriatic Sea§!\n      Has a port on the §YStraits of Otranto§!\n   One of the following must be true:\n      [151.GetName]:\n         Has §Y5%§! or more trade power.\n      [109.GetName]:\n         Has §Y5%§! or more trade power.\n   Has a larger fleet than §Y[Root.GetName]§!."
@@ -72,7 +79,7 @@
  X_VEN_mission_5_tt2:0 "Every owned province in the §YDalmatia§! Area:\nGain §G3§! Base Production and §G3§! Base Manpower in the provinces that have a §YDrydock§!.\nGain §G2§! Base Production and §G2§! Base Manpower in the provinces that have a §YDock§!. Replace the §YDock§! with a §YDrydock§!.\nGain §G1§! Base Production, §G1§! Base Manpower, and a §YDock§! in the provinces that do not have a §YDrydock§! or §YDock§!."
  X_VEN_mission_5_tt3:0 "\nEvery owned province in the §YDalmatia§! Area with a §YFort§! gets '§YDalmatian Fortifications§!' until the end of the game, giving the following effects:\nLocal Defensiveness: §G+45.0%§!"
  X_VEN_mission_8_tt:0 "No country:\n   Has a port on the §YMediterranean Sea§!.\n   Has a larger fleet than §Y[Root.GetName]§!."
- X_VEN_mission_13_tt:0 "§YSilk§! will now be produced in one province in the §YMorea§! Area.\n§YWine§! producing provinces in the §YMorea§! Area gets '§YRenewed Viticulture§!' for §Y20 years§!, giving the following effects:\nLocal Goods Produced Modifier: §G+50.0%§!"
+ X_VEN_mission_13_tt:0 "§YWine§! producing provinces in the §YMorea§! Area get '§YRenewed Viticulture§!' for §Y20 years§!, giving the following effects:\nLocal Goods Produced Modifier: §G+50.0%§!"
  X_VEN_mission_15_tt:0 "§YProvince(s)§! is NOT on an island."
  X_VEN_mission_16_tt:0 "§Y[321.GetName]§! owned by Them or a Subject"
  X_VEN_mission_19_tt:0 "No island in the §YEastern Mediterranean Islands§! Area or §YAegean Archipelago§! Area is owned by §Y[KNI.GetName]§!."
@@ -123,6 +130,14 @@
  X_VEN_stato_da_mar_cmod_desc:0 ""
  X_VEN_magistrato_al_sal_cmod:0 "Magistrato al Sal"
  X_VEN_magistrato_al_sal_cmod_desc:0 ""
+ X_VEN_preservation_of_classics_cmod:0 "Preservation of Classics"
+ X_VEN_preservation_of_classics_cmod_desc:0 ""
+ X_VEN_cretan_literature_cmod:0 "Cretan Literature"
+ X_VEN_cretan_literature_cmod_desc:0 ""
+ X_VEN_center_of_greek_arts_pmod:0 "Center of Greek Arts"
+ X_VEN_center_of_greek_arts_pmod_desc:0 ""
+ X_VEN_new_advisement_cmod:0 "New Advisement"
+ X_VEN_new_advisement_cmod_cmod:0 ""
  #Events
  X_VEN_events.1.t:0 "The Balkan Latin Republic"
  X_VEN_events.1.d1:0 ""
