Ottos get thriving arms industry mission back

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -32,7 +32,7 @@
  mongol_consolidation:0 "Mongol Consolidation"
  norman_resurgence:0 "Norman Resurgence"
  Defense_of_Europe:0 "Defense of Europe"
-
+ gc_thriving_arms_industry:0 "Thriving Arms Industry"
  #Province Triggered Modifiers
  conquest_of_constantinople:0 "Conquest of Constantinople"
  conquest_of_paris:0 "Conquest of Paris"
