--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -1,4 +1,8 @@
 ﻿l_english:
+#generic
+
+gc_build_army_mission_title:0 "Build to Force Limit"
+gc_build_army_mission_desc:0 ""
  buk_mission_conquer_central_asia_title:0 "Dominate Central Asia"
  buk_mission_conquer_central_asia_desc:0 "No Khan must be left in Central Asia to challenge our rule. Our dominance over the region must be absolute."
  buk_mission_conquer_mongolia_title:0 "Khan of Khans"
