new build: armoury added

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -85,3 +85,4 @@
  geckomercvalue:0 "Number of Mercenaries"
  geckomercFL:0 "Mercenary Forcelimit"
  fu_toob_benadir:0 "Toob Benadir Market"
+ building_armory: "Armoury"
