Appropiate loadingscreen tips

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,32 +1,32 @@
 ﻿l_english:
- LOADING_TIP_0:0 "Republics have elections every 4-8 years."
- LOADING_TIP_1:0 "Attrition in winter can be really severe.\nIt might be better to pull back and plan your spring campaign."
- LOADING_TIP_2:0 "Advisors not only give you a bonus from their specialty.\nThey also boost your Administrative, Diplomatic or Military Power."
- LOADING_TIP_3:0 "Losing a war and a few provinces is no reason to quit.\nYou can take those back later, in your enemy's moment of weakness."
- LOADING_TIP_4:0 "You don't have to take all of your enemy's provinces in one war.\nThere is plenty of time for more wars later."
- LOADING_TIP_5:0 "Always make sure your armies have a leader before engaging an enemy.\nLeaderless armies are more likely to lose, and can shatter entirely."
- LOADING_TIP_6:0 "When you have no units selected you can right-click\na province to open up Diplomacy with that nation."
- LOADING_TIP_7:0 "Make sure you have a claim on an enemy's province.\nIt will be cheaper and faster to make it your core later."
- LOADING_TIP_8:0 "Right click on an alert to dismiss it, and shift+right-click\nto disable it. You can enable them again in the outliner."
- LOADING_TIP_9:0 "The latest peace offer you sent in the current war is saved.\nSo if the enemy does not accept right now, you can easily send it again."
- LOADING_TIP_10:0 "Having a claim reduces the cost and time to make the province\na core by 10%."
- LOADING_TIP_11:0 "Don't enter too many Diplomatic Relationships. You will lose\nDiplomatic Power if you are above your Diplomatic Upkeep."
- LOADING_TIP_12:0 "Light Ships are the key to securing trade opportunities."
- LOADING_TIP_13:0 "It costs Administrative Power to increase Stability.\nKeep that in mind before you accept a loss in Stability from an event."
- LOADING_TIP_14:0 "The first Idea Group is unlocked at\nAdministrative Technology level 5"
- LOADING_TIP_15:0 "Value your Monarch Points. They are very important\nfor Technology and Ideas."
- LOADING_TIP_16:0 "War Exhaustion can be reduced by spending Diplomatic Power."
- LOADING_TIP_17:0 "Having too many leaders will cost you Military Power each month."
- LOADING_TIP_18:0 "Be wary of Overextension. Having too many\nnon-Core provinces can be dangerous."
- LOADING_TIP_19:0 "Trade going to the end-nodes of Venice, Genoa\nand the English Channel cannot be steered away."
- LOADING_TIP_20:0 "Left-click on a province to open its province view.\nRight-click on a province to open Diplomacy with the owner."
- LOADING_TIP_21:0 "Besieged forts of coastal provinces will surrender sooner if there's a naval blockade in place."
- LOADING_TIP_22:0 "Your home Trade Node will collect trade income,\neven if you don't have a Merchant assigned there."
- LOADING_TIP_23:0 "Controlling a good amount of the world's supply of a type of trade goods will grant unique bonuses related to the product."
- LOADING_TIP_24:0 "Provinces of highly mercantile countries grant more Trade Power in Trade Nodes they trade through."
- LOADING_TIP_25:0 "You can use the ledger to compare your country's economic and military power against others."
- LOADING_TIP_26:1 "When relieving a besieged Fort, your armies will be treated as the defenders."
- LOADING_TIP_27:0 "High Stability increases your chances of inheriting countries you are in a Personal Union with."
+ LOADING_TIP_0:0 "Do not feed the Dog."
+ LOADING_TIP_1:0 "Forming the Roman Empire will not get you laid."
+ LOADING_TIP_2:0 "yenik broke the mod again"
+ LOADING_TIP_3:0 "House Gecko sends their regards."
+ LOADING_TIP_4:0 "Funni Funni?"
+ LOADING_TIP_5:0 "Always make sure you drill your armies on the border."
+ LOADING_TIP_6:0 "Just because you can join a player coalition, does not mean you should."
+ LOADING_TIP_7:0 "You are only taking a river crossing, into mountains, what is the worst that could happen."
+ LOADING_TIP_8:0 "Smoile"
+ LOADING_TIP_9:0 "Do not play the country smeev just played, 100% it is getting nerfed."
+ LOADING_TIP_10:0 "We do not get paid by the Turkish government /nHowever we accept payment in Nitros"
+ LOADING_TIP_11:0 "Holy BatChest"
+ LOADING_TIP_12:0 "Allahbor occupied Aba's house. /nYes he is OG"
+ LOADING_TIP_13:0 "Not biased but based."
+ LOADING_TIP_14:0 "Ham Thread"
+ LOADING_TIP_15:0 "I made gecko mod entirely /n-Dum Idiet"
+ LOADING_TIP_16:0 "The Ham thread is not real, it can not hurt you"
+ LOADING_TIP_17:0 "Dave it is june"
+ LOADING_TIP_18:0 "Do not call me dude"
+ LOADING_TIP_19:0 "I cant go to yemen im an analyst"
+ LOADING_TIP_20:0 "u know wat else is up"
+ LOADING_TIP_21:0 "My Desert. My Arrakis. My Dune"
+ LOADING_TIP_22:0 "You are in my node"
+ LOADING_TIP_23:0 "The innovative defensive gank"
+ LOADING_TIP_24:0 "Stop coping dum idiet crimea was perfectly fine"
+ LOADING_TIP_25:0 "Tibet will never release"
+ LOADING_TIP_26:1 "IM TRYING HERE MADGE"
+ LOADING_TIP_27:0 "The burden of being a S+ player"
  LOADING_TIP_28:1 "Don't use up all your Administrative Power while at war.\nYou may need some to core any provinces you take."
  LOADING_TIP_29:0 "All trade modifiers are listed and explained in the Trade screen for your country."
  LOADING_TIP_30:0 "Your ships will suffer attrition in ocean provinces,\nuntil you have reached Diplomatic Technology level 22."
