--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -27,11 +27,11 @@
  LOADING_TIP_25:0 "Tibet will never release"
  LOADING_TIP_26:1 "IM TRYING HERE MADGE"
  LOADING_TIP_27:0 "The burden of being a S+ player"
- LOADING_TIP_28:1 "Don't use up all your Administrative Power while at war.\nYou may need some to core any provinces you take."
- LOADING_TIP_29:0 "All trade modifiers are listed and explained in the Trade screen for your country."
- LOADING_TIP_30:0 "Your ships will suffer attrition in ocean provinces,\nuntil you have reached Diplomatic Technology level 22."
- LOADING_TIP_31:0 "Choose your Idea Groups carefully!"
- LOADING_TIP_32:0 "Coring provinces is more costly if you have War Exhaustion."
+ LOADING_TIP_28:1 "I need a vassal"
+ LOADING_TIP_29:0 "I crashed"
+ LOADING_TIP_30:0 "I am calling this game"
+ LOADING_TIP_31:0 "These kids are cute"
+ LOADING_TIP_32:0 "This is a cute prussia"
  LOADING_TIP_33:0 "The more autonomous your provinces are, the less tax and manpower you will get from them."
  LOADING_TIP_34:0 "Sending Light Ships to Protect Trade will increase your Naval Tradition."
  LOADING_TIP_35:0 "Naval Tradition increases your Trade Steering."
