--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -2,17 +2,17 @@
  LOADING_TIP_0:0 "Do not feed the Dog."
  LOADING_TIP_1:0 "Forming the Roman Empire will not get you laid."
  LOADING_TIP_2:0 "yenik broke the mod again"
- LOADING_TIP_3:0 "House Gecko sends their regards."
+ LOADING_TIP_3:0 "House Gecko sends their regards"
  LOADING_TIP_4:0 "Funni Funni?"
  LOADING_TIP_5:0 "Always make sure you drill your armies on the border."
  LOADING_TIP_6:0 "Just because you can join a player coalition, does not mean you should."
- LOADING_TIP_7:0 "You are only taking a river crossing, into mountains, what is the worst that could happen."
+ LOADING_TIP_7:0 "You are only taking a river crossing, into mountains, what is the worst that could happen?"
  LOADING_TIP_8:0 "Smoile"
  LOADING_TIP_9:0 "Do not play the country smeev just played, 100% it is getting nerfed."
  LOADING_TIP_10:0 "We do not get paid by the Turkish government /nHowever we accept payment in Nitros"
  LOADING_TIP_11:0 "Holy BatChest"
  LOADING_TIP_12:0 "Allahbor occupied Aba's house. /nYes he is OG"
- LOADING_TIP_13:0 "Not biased but based."
+ LOADING_TIP_13:0 "Not biased but based"
  LOADING_TIP_14:0 "Ham Thread"
  LOADING_TIP_15:0 "I made gecko mod entirely /n-Dum Idiet"
  LOADING_TIP_16:0 "The Ham thread is not real, it can not hurt you"
@@ -32,11 +32,11 @@
  LOADING_TIP_30:0 "I am calling this game"
  LOADING_TIP_31:0 "These kids are cute"
  LOADING_TIP_32:0 "This is a cute prussia"
- LOADING_TIP_33:0 "The more autonomous your provinces are, the less tax and manpower you will get from them."
- LOADING_TIP_34:0 "Sending Light Ships to Protect Trade will increase your Naval Tradition."
- LOADING_TIP_35:0 "Naval Tradition increases your Trade Steering."
- LOADING_TIP_36:0 "Assigning a leader with maneuver to a fleet that is Protecting Trade will increase its efficiency."
- LOADING_TIP_37:0 "Your troops may suffer increased attrition during winter."
+ LOADING_TIP_33:0 "House Gecko won the great holy war"
+ LOADING_TIP_34:0 "Who is the elephant in the room"
+ LOADING_TIP_35:0 "Dont wipe my kids"
+ LOADING_TIP_36:0 "Dont trust his lies"
+ LOADING_TIP_37:0 "Vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv"
  LOADING_TIP_38:0 "The number of monthly reinforcements is tied to your army maintenance slider."
  LOADING_TIP_39:0 "Rulers and heirs that command an army may die in battle.\nThink twice before assigning them!"
  LOADING_TIP_40:0 "Even a small siege bonus can shorten a siege significantly."
