--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -37,24 +37,24 @@
  LOADING_TIP_35:0 "Dont wipe my kids"
  LOADING_TIP_36:0 "Dont trust his lies"
  LOADING_TIP_37:0 "Vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv"
- LOADING_TIP_38:0 "The number of monthly reinforcements is tied to your army maintenance slider."
- LOADING_TIP_39:0 "Rulers and heirs that command an army may die in battle.\nThink twice before assigning them!"
- LOADING_TIP_40:0 "Even a small siege bonus can shorten a siege significantly."
- LOADING_TIP_41:0 "Reduced Recruitment Cost for a unit also reduces Maintenance Cost."
- LOADING_TIP_42:0 "The cost for advisors increases as time advances."
- LOADING_TIP_43:0 "You may recall your Colonist after establishing a colony. It will reduce the colony's growth, but allows you to colonize another province."
- LOADING_TIP_44:0 "Exceeding your colony limit will increase colonial maintenance significantly."
- LOADING_TIP_45:0 "Don't take too much land at once.\nOverextension means trouble on the horizon!"
- LOADING_TIP_46:0 "Overextension increases the costs of raising Stability."
- LOADING_TIP_47:0 "Lower Religious Unity will increase unrest in your provinces."
- LOADING_TIP_48:0 "Overseas colonies will not add to Overextension.\nBut conquered cities will!"
- LOADING_TIP_49:0 "Blockading enemy ports not only hurts their province income, but also their Trade Power."
- LOADING_TIP_50:0 "Both taking and extending loans increases inflation."
- LOADING_TIP_51:0 "Mercenaries can be useful to conserve Manpower, if you can afford them."
- LOADING_TIP_52:0 "Raising autonomy in a province will lower the unrest but earn you less taxes."
- LOADING_TIP_53:0 "Picking rivals hurts your relations with them, but earns you more Prestige in battle and allows you to claim more land from them."
- LOADING_TIP_54:0 "Controlling provinces in important Trade Nodes is vital for achieving a global trade empire."
- LOADING_TIP_55:0 "Coalitions can be a very powerful tool to counter a superior foe."
+ LOADING_TIP_38:0 "He is an S+ tier TURK"
+ LOADING_TIP_39:0 "U wouldnt understand ur not S+ player"
+ LOADING_TIP_40:0 "As long as smeev has absolute power and keeps doing whatever he want we gonna keep 'enjoying' 3 session games /nhf whoever is gonna play that shit"
+ LOADING_TIP_41:0 "I like to watch him go on his wheel"
+ LOADING_TIP_42:0 "Tooltips are always updated and tell the truth only"
+ LOADING_TIP_43:0 "There will never be a changelog"
+ LOADING_TIP_44:0 "If players are going to play this scummy i would rather go hang out with gf /nEu4 players should really touch some grass"
+ LOADING_TIP_45:0 "If you dont make nice borders ur not welcome in House Gecko"
+ LOADING_TIP_46:0 "Look at that sweaty snake"
+ LOADING_TIP_47:0 "Bottom text"
+ LOADING_TIP_48:0 "I will leave this server and never come back"
+ LOADING_TIP_49:0 "Holy fuck this is broken /nsmeev needs to nerf this"
+ LOADING_TIP_50:0 "He is literally me /n-Timur 'Smeev' Tamerlane"
+ LOADING_TIP_51:0 "Dont build cav its worthless"
+ LOADING_TIP_52:0 "We value your humble opinion and would like to receive more DMs"
+ LOADING_TIP_53:0 "Always gank the elephant"
+ LOADING_TIP_54:0 "Skill issue"
+ LOADING_TIP_55:0 "Gankers get ganked"
  LOADING_TIP_56:0 "Don't rush into action, make sure you know your foe's friends and enemies before declaring war. They can be useful to achieve your goals."
  LOADING_TIP_57:0 "Armies, navies and advisors become more expensive over time.\nMake sure your economy grows enough to keep supporting them."
  LOADING_TIP_58:0 "Constructing buildings can greatly increase the value of your provinces."
