--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,20 +1,20 @@
 ﻿l_english:
- LOADING_TIP_0:0 "Do not feed the Dog."
+ LOADING_TIP_0:0 "Don't feed the Dog."
  LOADING_TIP_1:0 "Forming the Roman Empire will not get you laid."
- LOADING_TIP_2:0 "yenik broke the mod again"
+ LOADING_TIP_2:0 "Yenik broke the mod again"
  LOADING_TIP_3:0 "House Gecko sends their regards"
  LOADING_TIP_4:0 "Funni Funni?"
  LOADING_TIP_5:0 "Always make sure you drill your armies on the border."
  LOADING_TIP_6:0 "Just because you can join a player coalition, does not mean you should."
  LOADING_TIP_7:0 "You are only taking a river crossing, into mountains, what is the worst that could happen?"
  LOADING_TIP_8:0 "Smoile"
- LOADING_TIP_9:0 "Do not play the country smeev just played, 100% it is getting nerfed."
- LOADING_TIP_10:0 "We do not get paid by the Turkish government /nHowever we accept payment in Nitros"
+ LOADING_TIP_9:0 "Do not play the country Smeev just played, 100% it is getting nerfed."
+ LOADING_TIP_10:0 "We do not get paid by the Turkish government \nHowever we accept payment in Nitros"
  LOADING_TIP_11:0 "Holy BatChest"
- LOADING_TIP_12:0 "Allahbor occupied Aba's house. /nYes he is OG"
+ LOADING_TIP_12:0 "Allahbor occupied Aba's house. \nYes he is OG"
  LOADING_TIP_13:0 "Not biased but based"
  LOADING_TIP_14:0 "Ham Thread"
- LOADING_TIP_15:0 "I made gecko mod entirely /n-Dum Idiet"
+ LOADING_TIP_15:0 "I made gecko mod entirely \n-Dum Idiet"
  LOADING_TIP_16:0 "The Ham thread is not real, it can not hurt you"
  LOADING_TIP_17:0 "Dave it is june"
  LOADING_TIP_18:0 "Do not call me dude"
@@ -32,31 +32,31 @@
  LOADING_TIP_30:0 "I am calling this game"
  LOADING_TIP_31:0 "These kids are cute"
  LOADING_TIP_32:0 "This is a cute prussia"
- LOADING_TIP_33:0 "House Gecko won the great holy war"
+ LOADING_TIP_33:0 "House Gecko won the Great Holy War"
  LOADING_TIP_34:0 "Who is the elephant in the room"
  LOADING_TIP_35:0 "Dont wipe my kids"
  LOADING_TIP_36:0 "Dont trust his lies"
  LOADING_TIP_37:0 "Vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv"
- LOADING_TIP_38:0 "He is an S+ tier TURK"
+ LOADING_TIP_38:0 "He is an S+ tier turk"
  LOADING_TIP_39:0 "U wouldnt understand ur not S+ player"
- LOADING_TIP_40:0 "As long as smeev has absolute power and keeps doing whatever he want we gonna keep 'enjoying' 3 session games /nhf whoever is gonna play that shit"
+ LOADING_TIP_40:0 "As long as Smeev has absolute power and keeps doing whatever he want we gonna keep 'enjoying' 3 session games \nhf whoever is gonna play that shit"
  LOADING_TIP_41:0 "I like to watch him go on his wheel"
  LOADING_TIP_42:0 "Tooltips are always updated and tell the truth only"
  LOADING_TIP_43:0 "There will never be a changelog"
- LOADING_TIP_44:0 "If players are going to play this scummy i would rather go hang out with gf /nEu4 players should really touch some grass"
+ LOADING_TIP_44:0 "If players are going to play this scummy i would rather go hang out with gf \nEu4 players should really touch some grass"
  LOADING_TIP_45:0 "If you dont make nice borders ur not welcome in House Gecko"
- LOADING_TIP_46:0 "Look at that sweaty snake"
+ LOADING_TIP_46:0 "Look at that sweat"
  LOADING_TIP_47:0 "Bottom text"
  LOADING_TIP_48:0 "I will leave this server and never come back"
- LOADING_TIP_49:0 "Holy fuck this is broken /nsmeev needs to nerf this"
- LOADING_TIP_50:0 "He is literally me /n-Timur 'Smeev' Tamerlane"
+ LOADING_TIP_49:0 "Holy fuck this is broken \nSmeev needs to nerf this"
+ LOADING_TIP_50:0 "He is literally me \n-Timur 'Smeev' Tamerlane"
  LOADING_TIP_51:0 "Dont build cav its worthless"
  LOADING_TIP_52:0 "We value your humble opinion and would like to receive more DMs"
  LOADING_TIP_53:0 "Always gank the elephant"
  LOADING_TIP_54:0 "Skill issue"
  LOADING_TIP_55:0 "Gankers get ganked"
- LOADING_TIP_56:0 "Don't rush into action, make sure you know your foe's friends and enemies before declaring war. They can be useful to achieve your goals."
- LOADING_TIP_57:0 "Armies, navies and advisors become more expensive over time.\nMake sure your economy grows enough to keep supporting them."
+ LOADING_TIP_56:0 "Gecko is inevitable."
+ LOADING_TIP_57:0 "Playing Gecko 7 days a week is not a replacement for therapy"
  LOADING_TIP_58:0 "Constructing buildings can greatly increase the value of your provinces."
  LOADING_TIP_59:0 "The value of trade goods directly increases the production income from a province."
  LOADING_TIP_60:0 "Adding a core to a province is cheaper when you have a claim on it."
@@ -92,7 +92,7 @@
  LOADING_TIP_90:0 "The Z and C keys can be used to cancel and confirm event decisions and diplomacy decisions."
  LOADING_TIP_91:0 "The B key opens up the rebalance army interface."
  LOADING_TIP_92:0 "With the rebalance army interface open the Z and B key can be used to send units from one side to another."
- LOADING_TIP_93:0 "The B key can be used to deselect the top army or navy when multiple armies/navies are selected."
+ LOADING_TIP_93:0 "The B key can be used to deselect the top army or navy when multiple armies\navies are selected."
  LOADING_TIP_94:0 "The Ottomans are the strongest nation in the game, and are recommended if you are a beginner."
  LOADING_TIP_95:0 "Very Easy is suitable for beginners who feel that Normal is too challenging."
  LOADING_TIP_96:0 "At Hard difficulty, the AI is as skillful as possible with almost no cheats."
