--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -181,6 +181,8 @@
  gc_hungary_conquest_of_rome:0 "Protector of Rome"
  gc_hungary_conquest_of_poland:0 "Integration of West Slavic Culture"
  gc_hun_strong_economy:0 "Strong Economy"
+ hun_golden_kremnica:0 "Golden Kremnica"
+ hun_royal_town:0 "Royal Free Town"
 
 #Burgundy
 lowland_integration:0 "Lowland Integration"
