--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -30,7 +30,7 @@
  LOADING_TIP_28:1 "I need a vassal"
  LOADING_TIP_29:0 "I crashed"
  LOADING_TIP_30:0 "I am calling this game"
- LOADING_TIP_31:0 "These kids are cute"
+ LOADING_TIP_31:0 "skill issue"
  LOADING_TIP_32:0 "This is a cute prussia"
  LOADING_TIP_33:0 "House Gecko won the Great Holy War"
  LOADING_TIP_34:0 "Who is the elephant in the room"
